# lameencode

./: build.gradle  gradle.properties  settings.gradle
NexusUpload/: nexus_upload.gradle
app/: build.gradle
app/src/androidTest/java/com/milo/lameencode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/milo/lameencode/: MainActivity.java  Mp3Encode.java
app/src/main/java/com/milo/lameencode/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/milo/lameencode/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libencode/: build.gradle
libencode/src/androidTest/java/com/milo/lameencode/: ExampleInstrumentedTest.java
libencode/src/main/: AndroidManifest.xml
libencode/src/main/java/com/milo/lameencode/: Mp3Encode.java
libencode/src/main/res/values/: strings.xml
